<resources>
    <string name="app_name">MyDouban</string>
    <string name="title_list">书影音</string>
    <string name="title_collect">收藏</string>
    <string name="movie_poster">movie poster</string>
    <string name="dashboard_top_250"><![CDATA[全部 250 >]]></string>
    <string name="list_douban_top">豆瓣榜单</string>
    <string name="douban_rating">豆瓣评分</string>
    <string name="list_title">豆瓣电影 Top250</string>
    <string name="list_top250_text">豆瓣电影 Top250</string>
    <string name="list_top250_content">250个内容 33.4万人关注</string>
    <string name="share">分享</string>
    <string name="focus">+ 关注</string>
    <string name="list_top250_describe">根据"看过"人数、评分、评价等因素，通过算法得出的电电影综合排名，每周更新</string>
    <string name="todo">TODO</string>
    <string name="director">导演</string>
    <string name="cast">演员</string>
    <string name="like">like</string>
    <string name="operate_del_btn">删除</string>
    <string name="is_loading">正在加载</string>
    <string name="is_failed">获取数据失败，请重试</string>

    <string name="detail_collect_btn">看过</string>
    <string name="detail_app_bar">电影</string>
    <string name="detail_play_icon">detail play icon</string>
    <string name="detail_online_play">在线观看</string>
    <string name="detail_wish_btn">想看</string>
    <string name="detail_wish_btn_clicked">已想看</string>
    <string name="detail_tags_title">相关分类</string>
    <string name="detail_summary">简介</string>
    <string name="detail_summary_expand_hint">展开</string>
    <string name="detail_casts">演职员</string>
    <string name="detail_cast_avatar">detail cast avatar</string>
    <string name="detail_popular_comments">短评</string>
    <string name="detail_comments_author_avatar">detail comments author avatar</string>
    <string name="dashboard_in_theater">正在热映</string>
    <string name="dashboard_all_500"><![CDATA[全部 500 >]]></string>
</resources>
