<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:background="@color/grayBlack"
        android:theme="@style/AppTheme.AppBarOverlay">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/top_list_head_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_top250_background"
                    android:scaleType="fitXY" />

                <Button
                    android:id="@+id/go_back_to_dashboard"
                    android:layout_width="27dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_back_32"
                    android:fitsSystemWindows="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_collapseMode="pin" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_list_toolbar_content"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
                    <TextView
                        android:id="@+id/list_top250_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/list_top250_text"
                        android:textColor="@color/fullWhite"
                        android:textSize="@dimen/font_normal"
                        android:layout_marginStart="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_top250_content"
                        android:textColor="@color/fullWhite"
                        android:textSize="@dimen/font_small"
                        app:layout_constraintStart_toStartOf="@+id/list_top250_text"
                        app:layout_constraintTop_toBottomOf="@+id/list_top250_text" />

                    <Button
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/fullWhite"
                        android:text="@string/focus"
                        android:textColor="@color/grayBlack"
                        android:textSize="@dimen/font_normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/list_top250_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

   <include
       android:layout_marginTop="55dp"
       layout="@layout/top_list_recycle_scrolling"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       />

</androidx.coordinatorlayout.widget.CoordinatorLayout>